--- a/anti_poke_plugin/_manifest.json
+++ b/anti_poke_plugin/_manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 1,
   "name": "anti_poke_plugin",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "防戳插件，在帮助你的麦麦实现人性化戳一戳互动的同时，避免过多戳一戳捣乱",
   "author": {
     "name": "A肆零西烛",
@@ -14,7 +14,7 @@
   },
   "keywords": ["poke", "moderation", "reply"],
   "categories": ["Moderation", "Anti Poke"],
-  "repository_url": "暂无",
+  "repository_url": "https://github.com/A0000Xz/MaiBot-AntiPoke-Plugin",
   "default_locale": "zh-CN",
   "locales_path": "_locales"
 }
