--- a/anti_poke_plugin/_manifest.json
+++ b/anti_poke_plugin/_manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 1,
-  "name": "anti_poke_plugin",
-  "version": "0.6.0",
-  "description": "防戳插件，在帮助你的麦麦实现人性化戳一戳互动的同时，避免过多戳一戳捣乱",
+  "name": "防戳插件",
+  "version": "0.9.0",
+  "description": "帮助你的麦麦实现人性化戳一戳互动的同时，避免过多戳一戳捣乱",
   "author": {
     "name": "A肆零西烛",
     "url": "https://github.com/A0000Xz"
